Added react eslint rules.

--- a/app/templates/.eslintrc
+++ b/app/templates/.eslintrc
@@ -23,6 +23,18 @@
         "indent": [4, 4],
         "no-lonely-if": 2,
         "no-multiple-empty-lines": [2, {"max": 2}]
+
+        "react/jsx-boolean-value": 1,
+        "react/jsx-quotes": 1,
+        "react/jsx-no-undef": 1,
+        "react/jsx-uses-react": 1,
+        "react/jsx-uses-vars": 1,
+        "react/no-did-mount-set-state": 1,
+        "react/no-did-update-set-state": 1,
+        "react/no-multi-comp": 1,
+        "react/no-unknown-property": 1,
+        "react/react-in-jsx-scope": 1,
+        "react/self-closing-comp": 1
     },
     "plugins": [
         "react"
